# lard

./: .gitignore  Cargo.toml  Makefile  README.md  cleanup_test.py  connect_test.py  deploy.sh  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: .gitignore  bigip.yml  configure.yml  create-ipalias.yml  create-project-network.yml  create-project-security-group.yml  create-project-vm.yml  deploy.yml  format-mount-disk.yml  install-postgres.yml  inventory.ini  inventory.yml  migrate.yml  openstack.yml  provision.yml  readme.md  rejoin.yml  requirements.txt  requirements.yml  share-ssh-keys.yml  switchover.yml
ansible/group_vars/: servers.yaml
ansible/host_vars/: lard-a.yml
ansible/hotstandbysetup/: primary_new.yml  readme.md  standby_new.yml
ansible/primarystandbysetup/: primary_new.yml  standby_new.yml  switchover_promote_standby.yaml
ansible/roles/addsshkeys/defaults/: main.yml
ansible/roles/addsshkeys/tasks/: main.yml
ansible/roles/addsshkeys/vars/: main.yml
ansible/roles/bigip/defaults/: main.yml
ansible/roles/bigip/tasks/: main.yml
ansible/roles/bigip/vars/: bigip.sql  main.yml
ansible/roles/deploy/defaults/: main.yml
ansible/roles/deploy/files/: lard_ingestion.service  var_file
ansible/roles/deploy/tasks/: main.yml
ansible/roles/deploy/vars/: main.yml
ansible/roles/movefloatingip/tasks/: main.yml  movefloatingip.yml
ansible/roles/networks/defaults/: main.yml
ansible/roles/networks/meta/: main.yml
ansible/roles/networks/tasks/: create-ipalias-network.yml  create-project-network.yml  create-project-security-group.yml  main.yml  open-for-ping.yml
ansible/roles/networks/vars/: main.yml
ansible/roles/ostack/defaults/: main.yml
ansible/roles/primarystandbysetup/: readme.md
ansible/roles/primarystandbysetup/tasks/: create-primary.yml  create-standby.yml  main.yml
ansible/roles/rejoin/tasks/: main.yml  rejoin_old_primary.yml
ansible/roles/ssh/tasks/: main.yml  share-ssh-keys.yml
ansible/roles/switchover/tasks/: main.yml  switchover-promote-standby.yml  switchover.yml
ansible/roles/vm/defaults/: main.yml
ansible/roles/vm/tasks/: create-project-vm.yml  main.yml
ansible/roles/vm/vars/: main.yml
ansible/roles/vm_format/tasks/: format-mount-disk.yml  install-postgres.yml  main.yml  netplan.yml
ansible/roles/vm_format/vars/: main.yml
api/: Cargo.toml
api/src/: latest.rs  lib.rs  main.rs  timeseries.rs  timeslice.rs  util.rs
db/: flags.sql  labels.sql  partition.sql  partitions_generated.sql  public.sql  schema.sql
fake_data_generator/: Cargo.toml
fake_data_generator/src/: main.rs
ingestion/: Cargo.toml  go.mod  ingest_obsinn.go
ingestion/resources/: nonscalar.csv  paramconversions.csv
ingestion/src/: kldata.rs  kvkafka.rs  lib.rs  main.rs  permissions.rs
integration_tests/: Cargo.toml  Makefile  README.md
integration_tests/src/: main.rs
integration_tests/tests/: end-to-end.rs  end_to_end.rs
kafka_checked/: Cargo.toml
kafka_checked/src/: main.rs
kdvh_importer/: .gitignore  README.md  cli.go  config.go  convert_table_functions.go  custom_data_functions.go  data_functions.go  dump.go  email.go  go.mod  go.sum  import.go  import_dumps.go  kdvh_test.go  main.go  product_offsets.csv  result.go  utils.go
kdvh_importer/dump/: kdvh.go  kdvh_dump_functions.go  main.go
kdvh_importer/import/: kdvh.go
kdvh_importer/kdvh/: cache.go  dump.go  dump_functions.go  import.go  import_functions.go  kdvh_test.go  main.go  tables.go
kdvh_importer/lard/: main.go
kdvh_importer/migrate/: main.go
kdvh_importer/utils/: email.go  utils.go
lard_tests/: Cargo.toml  Makefile
lard_tests/tests/: api.rs  end-to-end.rs  ingestion.rs
lard_tests/tests/common/: mod.rs
pg_test/: Cargo.toml
pg_test/src/: main.rs
src/: main.rs
