[workspace]
members = [
  "fake_data_generator",
  "api",
  "ingestion",
  "lard_tests",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.7.4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
futures = "0.3.28"
postgres-types = { version = "0.2.6", features = ["derive", "with-chrono-0_4"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
reqwest = {version = "0.12.4", features = ["json"]}
test-case = "3.3.1"
