[workspace]
members = [
  "fake_data_generator",
  "api",
  "ingestion",
  "integration_tests",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.7.4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
bytes = "1.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
futures = "0.3.28"
kafka = "0.10.0"
postgres-types = { version = "0.2.7", features = ["derive", "with-chrono-0_4"] }
quick-xml = { version = "0.35.0", features = [ "serialize", "overlapped-lists" ] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
test-case = "3.3.1"
