[package]
name = "fake_data_generator"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
postgres-types.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true

[[bin]]
name = "generate_partitions"
