[package]
name = "lard_tests"
version = "0.1.0"
edition.workspace = true

[dependencies]
lard_api = { path = "../api" }
lard_ingestion = { path = "../ingestion", features = ["integration_tests"] }
chrono.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true 
serde.workspace = true
test-case.workspace = true
futures.workspace = true
reqwest = {version = "0.12.4", features = ["json"]}

[[bin]]
name = "prepare_postgres"
path = "src/main.rs"
test = false
bench = false
