[package]
name = "lard_tests"
version = "0.1.0"
edition.workspace = true

[dependencies]
lard_api = { path = "../api" }
lard_ingestion = { path = "../ingestion" }
chrono.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true 
serde.workspace = true

[dev-dependencies]
reqwest.workspace = true
test-case.workspace = true

[[bin]]
name = "prepare_db"
test = false
bench = false
