[package]
name = "pg_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"
