[package]
name = "pg_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
futures-util = "0.3.28"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"]}
postgres-types = { version = "0.2.6", features = ["derive", "with-chrono-0_4"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
